# protea-backends

./: .smell-baseline.json  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
docs/source/: conf.py  contributing.rst  index.rst
docs/source/backends/: ankh.rst  esm.rst  esm3c.rst  index.rst  t5.rst
src/protea_backends/: __init__.py  _chunk_helpers.py
src/protea_backends/ankh/: __init__.py
src/protea_backends/esm/: __init__.py
src/protea_backends/esm3c/: __init__.py
src/protea_backends/t5/: __init__.py
tests/: test_ankh.py  test_contract_compliance.py  test_esm.py  test_esm3c.py  test_smoke.py  test_t5.py
